--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,27 +16,25 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.example.android.architecture.blueprints.todoapp">
+  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+  <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+  <uses-permission android:name="android.permission.MANAGE_DOCUMENTS"/>
 
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.CAMERA"/>
   <application
     android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
     android:supportsRtl="true"
+      android:hardwareAccelerated="false"
+      android:largeHeap="true"
     android:theme="@style/AppTheme">
-    //this is for take and select or write the bitmap picture in your device
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.CAMERA"/>
 
-    //you need this permission for access the private information and gps locations of yours picture (only if you need this     functionallities)
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
-    //this permission is required only if you use the facial recognition functionallities
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    <uses-permission android:name="android.permission.MANAGE_DOCUMENTS"/>
     <activity
       android:name="com.example.android.architecture.blueprints.todoapp.tasks.TasksActivity"
       android:theme="@style/AppTheme.OverlapSystemBar">
@@ -58,7 +56,7 @@
     <activity android:name="com.example.android.architecture.blueprints.todoapp.addedittask.AddEditTaskActivity" />
     <activity android:name="com.example.android.architecture.blueprints.todoapp.statistics.StatisticsActivity" />
 
-    <provider
+      <provider
       android:name="com.example.android.architecture.blueprints.todoapp.data.source.TasksProvider"
       android:authorities="${packageName}"
       android:exported="false" />
